tests/ui/discord-frontend/entity_macro/expected_colon_2.stderr
error: expected `:`
  --> tests/ui/discord-frontend/entity_macro/expected_colon_2.rs:39:32
   |
LL |     overrides = ["ChannelFlags"],
   |                                ^

error: aborting due to 1 previous error

